--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,20 +1,20 @@
-fastapi==0.109.2
-uvicorn==0.27.1
-python-multipart==0.0.9
-Pillow==10.2.0
-pytest==8.0.1
-httpx==0.26.0
-pydantic==2.6.1
-pydantic-settings==2.1.0
-
 # Development dependencies
 black==24.1.1
+fastapi==0.109.2
 flake8==7.0.0
 flake8-docstrings==1.7.0
+httpx==0.26.0
 isort==5.13.2
 mypy==1.8.0
-pylint==3.0.3
+Pillow==10.2.0
 pre-commit==3.6.0
+pydantic==2.6.1
+pydantic-settings==2.1.0
+pylint==3.0.3
+pytest==8.0.1
+python-multipart==0.0.9
 
 # Type stubs
-types-Pillow 
+types-Pillow
+types-requests
+uvicorn==0.27.1
