--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -12,6 +12,7 @@ pydantic==2.6.1
 pydantic-settings==2.1.0
 pylint==3.0.3
 pytest==8.0.1
+pytest-cov==4.1.0
 python-multipart==0.0.9
 
 # Type stubs
