fix: add FastAPI to mypy configuration

--- a/backend/mypy.ini
+++ b/backend/mypy.ini
@@ -19,6 +19,10 @@ init_typed = True
 warn_required_dynamic_aliases = True
 warn_untyped_fields = True
 
+[mypy.plugins.fastapi.*]
+init_forbid_extra = True
+init_typed = True
+
 [mypy-fastapi.*]
 ignore_missing_imports = True
 
