--- a/backend/mypy.ini
+++ b/backend/mypy.ini
@@ -32,6 +32,9 @@ ignore_missing_imports = True
 [mypy-pydantic.*]
 ignore_missing_imports = True
 
+[mypy-pydantic_settings.*]
+ignore_missing_imports = True
+
 [mypy-pytest.*]
 ignore_missing_imports = True
 
