Clean up mypy.ini by removing empty sections and improving organization

--- a/backend/mypy.ini
+++ b/backend/mypy.ini
@@ -23,12 +23,9 @@ warn_untyped_fields = True
 init_forbid_extra = True
 init_typed = True
 
-[mypy-fastapi.*]
-
+# Third-party packages without type stubs
 [mypy-PIL.*]
 ignore_missing_imports = True
-
-[mypy-pydantic.*]
 
 [mypy-pydantic_settings.*]
 ignore_missing_imports = True
