Clean up mypy.ini by removing empty sections and improving organization

--- a/backend/mypy.ini
+++ b/backend/mypy.ini
@@ -13,6 +13,7 @@ warn_no_return = True
 warn_unreachable = True
 strict_optional = True
 
+# Plugin configurations
 [mypy.plugins.pydantic.*]
 init_forbid_extra = True
 init_typed = True
@@ -23,11 +24,12 @@ warn_untyped_fields = True
 init_forbid_extra = True
 init_typed = True
 
-# Third-party packages without type stubs
-[mypy-PIL.*]
-
+# Third-party package configurations
 [mypy-pydantic_settings.*]
 ignore_missing_imports = True
+
+# Third-party packages without type stubs
+[mypy-PIL.*]
 
 [mypy-pytest.*]
 
