Add dev branch to CI workflow triggers

--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -2,12 +2,12 @@ name: Backend CI
 
 on:
   push:
-    branches: [ master, main ]
+    branches: [ master, main, dev ]
     paths:
       - 'backend/**'
       - '.github/workflows/backend-ci.yml'
   pull_request:
-    branches: [ master, main ]
+    branches: [ master, main, dev ]
     paths:
       - 'backend/**'
       - '.github/workflows/backend-ci.yml'
