--- a/frontend/analysis_options.yaml
+++ b/frontend/analysis_options.yaml
@@ -9,6 +9,16 @@
 # packages, and plugins designed to encourage good coding practices.
 include: package:flutter_lints/flutter.yaml
 
+analyzer:
+  exclude:
+    - "**/*.g.dart"
+    - "**/*.freezed.dart"
+  errors:
+    invalid_annotation_target: ignore
+  language:
+    strict-casts: true
+    strict-raw-types: true
+
 linter:
   # The lint rules applied to this project can be customized in the
   # section below to disable rules from the `package:flutter_lints/flutter.yaml`
@@ -21,8 +31,46 @@ linter:
   # `// ignore_for_file: name_of_lint` syntax on the line or in the file
   # producing the lint.
   rules:
-    # avoid_print: false  # Uncomment to disable the `avoid_print` rule
-    # prefer_single_quotes: true  # Uncomment to enable the `prefer_single_quotes` rule
+    # Style
+    always_declare_return_types: true
+    always_put_required_named_parameters_first: true
+    avoid_bool_literals_in_conditional_expressions: true
+    avoid_positional_boolean_parameters: true
+    avoid_redundant_argument_values: true
+    curly_braces_in_flow_control_structures: true
+    depend_on_referenced_packages: true
+    directives_ordering: true
+    eol_at_end_of_file: true
+    flutter_style_todos: true
+    library_private_types_in_public_api: true
+    line_length: 100
+    prefer_const_constructors: true
+    prefer_const_declarations: true
+    prefer_expression_function_bodies: true
+    prefer_relative_imports: true
+    prefer_single_quotes: true
+    sort_child_properties_last: true
+    sort_constructors_first: true
+    sort_unnamed_constructors_first: true
 
+    # Error prevention
+    avoid_print: true
+    avoid_empty_else: true
+    avoid_web_libraries_in_flutter: true
+    empty_catches: true
+    only_throw_errors: true
+    package_prefixed_library_names: true
+    prefer_final_fields: true
+    prefer_final_locals: true
+    prefer_final_in_for_each: true
+    sized_box_for_whitespace: true
+    unnecessary_this: true
+    use_build_context_synchronously: true
+    use_key_in_widget_constructors: true
+
+    # Performance
+    avoid_unnecessary_containers: true
+    prefer_void_to_null: true
+    use_full_hex_values_for_flutter_colors: true
 # Additional information about this file can be found at
 # https://dart.dev/guides/language/analysis-options
