--- a/.github/workflows/frontend-ci.yml
+++ b/.github/workflows/frontend-ci.yml
@@ -41,7 +41,7 @@ jobs:
       - name: Run tests
         run: flutter test
 
-  # build-android job disabled due to NDK compatibility issues
+  # build-android job disabled due to time consumption
   # build-android:
   #   runs-on: ubuntu-latest
   #   needs: analyze-and-test
