--- a/backend/.pre-commit-config.yaml
+++ b/backend/.pre-commit-config.yaml
@@ -13,13 +13,14 @@ repos:
     rev: 24.2.0
     hooks:
     -   id: black
-        language_version: python3.9
+        language_version: python3.12
 
 -   repo: https://github.com/pycqa/isort
     rev: 5.13.2
     hooks:
     -   id: isort
         name: isort (python)
+        args: ["--profile", "black"]
 
 -   repo: https://github.com/pycqa/flake8
     rev: 7.0.0
@@ -29,6 +30,7 @@ repos:
         - flake8-docstrings
         - flake8-import-order
         - flake8-bugbear
+        args: ["--extend-ignore=I100,I201"]
 
 -   repo: https://github.com/pre-commit/mirrors-mypy
     rev: v1.9.0
