--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -1,4 +1,4 @@
-name: Backend CI
+name: Backend CI/CD
 
 on:
   push:
@@ -6,11 +6,13 @@ on:
     paths:
       - 'backend/**'
       - '.github/workflows/backend-ci.yml'
+      - 'infrastructure/**'
   pull_request:
     branches: [ master, main, dev ]
     paths:
       - 'backend/**'
       - '.github/workflows/backend-ci.yml'
+  workflow_dispatch:
 
 jobs:
   test:
@@ -69,3 +71,53 @@ jobs:
         flags: backend
         name: backend-coverage
         fail_ci_if_error: true
+
+  deploy-to-azure:
+    needs: test
+    if: github.ref == 'refs/heads/dev' && github.event_name != 'pull_request'
+    runs-on: ubuntu-latest
+    
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+        
+      - name: Set up Azure CLI
+        uses: azure/login@v1
+        with:
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
+          
+      - name: Setup Bicep
+        uses: azure/setup-bicep@v1
+          
+      - name: Deploy infrastructure
+        id: deploy-infra
+        run: |
+          az deployment group create \
+            --resource-group ski-dev-clth-pussel \
+            --template-file infrastructure/main.bicep \
+            --parameters environmentName=dev \
+            --output json > deployment-output.json
+            
+          echo "acr_name=$(jq -r '.properties.outputs.containerRegistryName.value' deployment-output.json)" >> $GITHUB_OUTPUT
+          echo "app_name=$(jq -r '.properties.outputs.appServiceName.value' deployment-output.json)" >> $GITHUB_OUTPUT
+        
+      - name: Build and push Docker image
+        uses: azure/docker-login@v1
+        with:
+          login-server: ${{ steps.deploy-infra.outputs.acr_name }}.azurecr.io
+          username: ${{ steps.deploy-infra.outputs.acr_name }}
+          password: ${{ secrets.ACR_PASSWORD }}
+          
+      - name: Build and push
+        run: |
+          cd backend
+          docker build -t ${{ steps.deploy-infra.outputs.acr_name }}.azurecr.io/pussel-backend:${{ github.sha }} .
+          docker tag ${{ steps.deploy-infra.outputs.acr_name }}.azurecr.io/pussel-backend:${{ github.sha }} ${{ steps.deploy-infra.outputs.acr_name }}.azurecr.io/pussel-backend:latest
+          docker push ${{ steps.deploy-infra.outputs.acr_name }}.azurecr.io/pussel-backend:${{ github.sha }}
+          docker push ${{ steps.deploy-infra.outputs.acr_name }}.azurecr.io/pussel-backend:latest
+          
+      - name: Deploy to App Service
+        uses: azure/webapps-deploy@v2
+        with:
+          app-name: ${{ steps.deploy-infra.outputs.app_name }}
+          images: ${{ steps.deploy-infra.outputs.acr_name }}.azurecr.io/pussel-backend:${{ github.sha }}
