--- a/backend/mypy.ini
+++ b/backend/mypy.ini
@@ -12,6 +12,7 @@ warn_unused_ignores = True
 warn_no_return = True
 warn_unreachable = True
 strict_optional = True
+exclude = \.git|\.mypy_cache|venv|__pycache__|
 
 # Plugin configurations
 [mypy.plugins.pydantic.*]
@@ -26,4 +27,43 @@ init_typed = True
 
 # Third-party package configurations
 [mypy-pydantic_settings.*]
+ignore_missing_imports = True
+
+[mypy.plugins.numpy.*]
+follow_imports = skip
+
+[mypy.plugins.pandas.*]
+follow_imports = skip
+
+[mypy.plugins.matplotlib.*]
+follow_imports = skip
+
+[mypy.plugins.dask.*]
+follow_imports = skip
+
+[mypy.plugins.tensorflow.*]
+follow_imports = skip
+
+[mypy.plugins.torch.*]
+follow_imports = skip
+
+[mypy.plugins.pytest.*]
+follow_imports = skip
+
+[mypy.plugins.sqlalchemy.*]
+follow_imports = skip
+
+[mypy.plugins.pydantic.*]
+follow_imports = skip
+
+[mypy.plugins.azure.*]
+follow_imports = skip
+ignore_missing_imports = True
+
+[mypy.plugins.azure.storage.*]
+follow_imports = skip
+ignore_missing_imports = True
+
+[mypy.plugins.azure.storage.blob.*]
+follow_imports = skip
 ignore_missing_imports = True
