--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -1,10 +1,9 @@
 [build-system]
-requires = ["setuptools>=42", "wheel"]
+requires = ["setuptools>=45", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [tool.black]
 line-length = 88
-target-version = ["py312"]
 include = '\.pyi?$'
 exclude = '''
 /(
@@ -24,11 +23,8 @@ exclude = '''
 profile = "black"
 line_length = 88
 multi_line_output = 3
-include_trailing_comma = true
-force_grid_wrap = 0
-use_parentheses = true
-ensure_newline_before_comments = true
-skip_glob = ["*/migrations/*", "venv/*"]
-sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
-known_first_party = ["app"]
-known_third_party = ["fastapi", "pydantic", "starlette"]
+
+[tool.mypy]
+python_version = "3.12"
+mypy_path = ["azure-storage-blob-stubs"]
+plugins = ["pydantic.mypy"]
