Fix dependency issues: Remove non-existent types-azure-storage-blob package and update mypy configuration

--- a/backend/mypy.ini
+++ b/backend/mypy.ini
@@ -56,14 +56,11 @@ follow_imports = skip
 [mypy.plugins.pydantic.*]
 follow_imports = skip
 
-[mypy.plugins.azure.*]
-follow_imports = skip
+[mypy-azure.*]
 ignore_missing_imports = True
 
-[mypy.plugins.azure.storage.*]
-follow_imports = skip
+[mypy-azure.storage.*]
 ignore_missing_imports = True
 
-[mypy.plugins.azure.storage.blob.*]
-follow_imports = skip
+[mypy-azure.storage.blob.*]
 ignore_missing_imports = True
