Fix mypy command in GitHub Actions workflow and remove unnecessary py.typed file

--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -54,7 +54,7 @@ jobs:
       run: flake8 . --extend-ignore=I100,I201
 
     - name: Type check with mypy
-      run: mypy app
+      run: mypy $(find app -name "*.py")
 
     - name: Run tests
       env:
