--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -14,6 +14,11 @@ on:
       - '.github/workflows/backend-ci.yml'
   workflow_dispatch:
 
+# Add permissions for OIDC authentication
+permissions:
+  id-token: write
+  contents: read
+
 jobs:
   test:
     runs-on: ubuntu-latest
