Update README and .gitignore for puzzle piece prediction model
- Added model checkpoints directory to .gitignore to prevent tracking of training artifacts.
- Revised README to reflect the new project structure, detailing dataset preparation utilities and model training instructions, including usage examples and customization options.

--- a/.gitignore
+++ b/.gitignore
@@ -181,6 +181,9 @@ Thumbs.db
 network/datasets/*/processed/
 network/datasets/*/raw/
 
+# Model checkpoints
+network/checkpoints/
+
 # Flutter/Dart specific
 *.class
 *.log
