--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -15,6 +15,12 @@ pydantic-settings==2.1.0
 pytest==8.0.1
 pytest-cov==4.1.0
 python-multipart==0.0.9
+pytorch-lightning==2.2.1
+timm==0.9.12
+
+# ML dependencies
+torch==2.2.0
+torchvision==0.17.0
 
 # Type stubs
 types-Pillow
