--- a/network/requirements.txt
+++ b/network/requirements.txt
@@ -3,6 +3,7 @@ matplotlib>=3.7.0
 pandas>=2.0.0
 pillow>=9.0.0
 pytorch-lightning>=2.0.0
+requests>=2.31.0
 scikit-learn>=1.2.0
 timm>=0.9.2
 torch>=2.0.0
