--- a/.github/workflows/network-ci.yml
+++ b/.github/workflows/network-ci.yml
@@ -33,7 +33,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-        pip install black isort flake8 flake8-docstrings mypy pandas-stubs types-requests
+        pip install black isort flake8 flake8-docstrings pyright
 
     # Check code formatting
     - name: Check formatting with black
@@ -45,5 +45,5 @@ jobs:
     - name: Lint with flake8
       run: flake8 . --extend-ignore=I100,I201
 
-    - name: Type check with mypy
-      run: mypy $(find . -name "*.py")
+    - name: Type check with pyright
+      run: pyright .
