--- a/.gitignore
+++ b/.gitignore
@@ -183,6 +183,9 @@ network/datasets/*
 # Model checkpoints
 network/checkpoints/
 
+# Experiment outputs
+network/outputs/
+
 # Flutter/Dart specific
 *.class
 *.log
