Experiments regarding generation of realistically looking puzzle pieces. Add parameter optimization and shape comparison scripts for puzzle piece generation
- Implemented `optimize_parameters.py` to optimize puzzle piece parameters using various metrics.
- Added functionality to load configurations, compute objective functions, and save optimized results.
- Introduced `shape_comparator.py` for comparing generated pieces against reference images using contour-based metrics.
- Included methods for extracting contours, normalizing, resampling, and calculating IoU, mean distance, and Hausdorff distance.
- Enhanced command-line interface for both scripts to support single and batch processing of pieces with verbose output options.

--- a/network/Makefile
+++ b/network/Makefile
@@ -24,8 +24,10 @@ format-check: isort-check black-check
 
 # Run flake8 linting
 # E203 is ignored because Black adds spaces around colons in slices (a[b : c])
+# W503 is ignored because PEP 8 now recommends breaking before binary operators
+# D202 is ignored because Black adds blank lines after docstrings before nested functions
 lint:
-	flake8 . --extend-ignore=I100,I201,E203
+	flake8 . --extend-ignore=I100,I201,E203,W503,D202
 
 # Run pyright type checking (same as VS Code Pylance)
 typecheck:
