--- a/.github/workflows/network-ci.yml
+++ b/.github/workflows/network-ci.yml
@@ -43,7 +43,7 @@ jobs:
       run: isort . --check-only --profile=black --line-length=120
 
     - name: Lint with flake8
-      run: flake8 . --extend-ignore=I100,I201
+      run: flake8 .
 
     - name: Type check with pyright
       run: pyright .
