Enhance puzzle piece generation and visualization tools
- Refactor TabParameters to generate more realistic tab dimensions, adjusting neck and bulb widths proportionally.
- Improve the generation of realistic tab edges with enhanced symmetry and curvature control.
- Add a new diagnostic script (diagnose_curves.py) to visualize Bézier curve control points and their effects on tab shapes.
- Introduce a new script (visualize_comparison.py) for visual comparison of reference and generated puzzle pieces, including distance heatmaps.
- Update optimize_parameters.py to allow asymmetry parameter optimization.
- Modify generate_reference_comparison to include an overlap comparison of generated and reference pieces.

--- a/network/Makefile
+++ b/network/Makefile
@@ -23,7 +23,7 @@ isort-check:
 format-check: isort-check black-check
 
 lint:
-	flake8 .
+	flake8 . --config=../.flake8
 
 # Run pyright type checking (same as VS Code Pylance)
 typecheck:
