--- a/.github/workflows/network-ci.yml
+++ b/.github/workflows/network-ci.yml
@@ -32,18 +32,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
-        pip install black isort flake8 flake8-docstrings pyright
+        make install-dev
 
-    # Check code formatting
-    - name: Check formatting with black
-      run: black . --check --line-length=120
-
-    - name: Check imports with isort
-      run: isort . --check-only --profile=black --line-length=120
-
-    - name: Lint with flake8
-      run: flake8 .
-
-    - name: Type check with pyright
-      run: pyright .
+    - name: Run all checks
+      run: make check
