--- a/.github/workflows/network-ci.yml
+++ b/.github/workflows/network-ci.yml
@@ -16,9 +16,6 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: network
 
     steps:
     - uses: actions/checkout@v4
@@ -32,7 +29,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        make install-dev
+        make install-dev-network
 
     - name: Run all checks
-      run: make check
+      run: make check-network
