fix: install shared puzzle_shapes package before backend deps

--- a/.github/workflows/frontend-ci.yml
+++ b/.github/workflows/frontend-ci.yml
@@ -103,6 +103,7 @@ jobs:
 
       - name: Install backend dependencies
         run: |
+          pip install -e shared/puzzle_shapes
           cd backend
           pip install -r requirements.txt
           pip install -e .
