fix: add debugging to backend startup in CI

--- a/.github/workflows/frontend-ci.yml
+++ b/.github/workflows/frontend-ci.yml
@@ -112,16 +112,29 @@ jobs:
       - name: Start backend server
         run: |
           cd backend
-          uvicorn app.main:app --host 0.0.0.0 --port 8000 > /tmp/backend.log 2>&1 &
+          echo "Current directory: $(pwd)"
+          echo "Python path: $(which python)"
+          echo "Uvicorn path: $(which uvicorn)"
+          echo "Testing import..."
+          python -c "from app.main import app; print('Import successful')"
+          echo "Starting uvicorn..."
+          nohup uvicorn app.main:app --host 0.0.0.0 --port 8000 > /tmp/backend.log 2>&1 &
+          BACKEND_PID=$!
+          echo "Backend PID: $BACKEND_PID"
           echo "Waiting for backend to start..."
           for i in {1..30}; do
             if curl -sf http://localhost:8000/health > /dev/null 2>&1; then
               echo "Backend started successfully"
               exit 0
             fi
+            if ! kill -0 $BACKEND_PID 2>/dev/null; then
+              echo "Backend process died. Logs:"
+              cat /tmp/backend.log
+              exit 1
+            fi
             sleep 1
           done
-          echo "Backend failed to start. Logs:"
+          echo "Backend failed to start within 30 seconds. Logs:"
           cat /tmp/backend.log
           exit 1
 
