--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,7 @@
     "lint": "oxlint --config oxlint.json --type-aware src/",
     "lint:fix": "oxlint --config oxlint.json --type-aware --fix src/",
     "typecheck": "tsc --noEmit",
-    "format": "prettier --write \"src/**/*.{ts,tsx,json,md}\"",
+    "format": "prettier --write --log-level warn \"src/**/*.{ts,tsx,json,md}\"",
     "format:check": "prettier --check \"src/**/*.{ts,tsx,json,md}\"",
     "check": "oxlint --config oxlint.json --type-aware src/ && tsc --noEmit && prettier --check \"src/**/*.{ts,tsx,json,md}\"",
     "test": "vitest run",
